--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,7 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="/src/css/global.style.css">
-    <link rel="stylesheet" href="/src/css/light-theme.css">
-    <link rel="stylesheet" href="/src/css/changer-theme.css">
+    <link rel="stylesheet" href="/dist/index.css">
 
 </head>
 
@@ -38,7 +36,7 @@
     </div> -->
 
     <!-- import do script JS -->
-    <script src="/src/js/scripts.js"></script>
+    <script src="/dist/main.js"></script>
 
 
     <div class="container">
