--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="/dist/index.css">
+    <link rel="stylesheet" href="css/changer-theme.css">
+    <link rel="stylesheet" href="css/global.style.css">
+    <link rel="stylesheet" href="css/light-theme.css">
 
 </head>
 
@@ -31,12 +33,8 @@
 
     <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 
-    <!-- <div>
-       <button id="theme-toggle"></button>
-    </div> -->
-
     <!-- import do script JS -->
-    <script src="/dist/main.js"></script>
+    <script src="js/scripts.js"></script>
 
 
     <div class="container">
@@ -135,19 +133,19 @@
                 <div class="tecnologias">
                     <h2>Tecnologias</h2>
                     <div class="tecnologias-img-top">
-                        <img style="width: 40px; height: 40px;" src="assets/icons8-angular-96.png" alt="imgs">
-                        <img style="width: 40px; height: 40px;" src="assets/css-3.png" alt="imgs">
-                        <img style="width: 40px; height: 40px;" src="assets/html-5.png" alt="imgs">
-                        <img style="width: 40px; height: 40px;" src="assets/java-script.png" alt="imgs">
-                        <img style="width: 40px; height: 40px;" src="assets/typescript.png" alt="imgs">
+                        <img style="width: 40px; height: 40px;" src="https://i.imgur.com/5LxVlHH.png" alt="imgs">
+                        <img style="width: 40px; height: 40px;" src="https://i.imgur.com/TPec8Th.png" alt="imgs">
+                        <img style="width: 40px; height: 40px;" src="https://i.imgur.com/PcRMHH4.png" alt="imgs">
+                        <img style="width: 40px; height: 40px;" src="https://i.imgur.com/6Z73U11.png" alt="imgs">
+                        <img style="width: 40px; height: 40px;" src="https://i.imgur.com/gJFGrnI.png" alt="imgs">
                     </div>
 
                     <div class="tecnologias-img-bottom">
-                        <img style="width: 40px; height: 40px;" src="assets/java.png" alt="imgs">
-                        <img style="width: 40px; height: 40px;" src="assets/icons8-logotipo-da-primavera-480.png"
+                        <img style="width: 40px; height: 40px;" src="https://i.imgur.com/WOj8Qrv.png" alt="imgs">
+                        <img style="width: 40px; height: 40px;" src="https://i.imgur.com/g0SPmSY.png"
                             alt="imgs">
-                        <img style="width: 40px; height: 40px;" src="assets/postgre.png" alt="imgs">
-                        <img style="width: 40px; height: 40px;" src="assets/mysql.png" alt="imgs">
+                        <img style="width: 40px; height: 40px;" src="https://i.imgur.com/QG1vG57.png" alt="imgs">
+                        <img style="width: 40px; height: 40px;" src="https://i.imgur.com/Sz7Vkqc.png" alt="imgs">
                     </div>
                 </div>
             </div>
